# luna-marketplaces-upstream

./: .gitignore  .gitmodules  AGENTS.md  Dockerfile  render.yaml
.cursor/rules/: caveman.mdc  local-servers.mdc  production.mdc  release.mdc  time-periods.mdc  version-bump.mdc
.cursor/skills/: SKILL.md
dojo/: verify_live.py
examples/hello_world_2/: __init__.py  luna-plugin.toml
fixtures/golden/: index.json  snapshot.json  timestamp.json
fixtures/keys/: marketplace.key  marketplace.pub
luna-plugin-dev-kit/: AGENTS.md  README.md  luna-plugins.code-workspace
luna-plugin-dev-kit/docs/: CREATING-A-PLUGIN.md  PLUGIN-ARCHITECTURE.md  SETUP-EXISTING-PLUGINS.md  UPDATING-A-PLUGIN.md
luna-plugin-dev-kit/plugins/: .gitkeep
luna-plugin-dev-kit/prompts/: bootstrap-workspace.prompt.md
luna-plugin-dev-kit/scripts/: package_plugin.py  publish_plugin.sh  sync_plugins.py
luna-plugin-dev-kit/template/: README.md  pyproject.toml
luna-plugin-dev-kit/template/my_plugin/: __init__.py  luna-plugin.toml
luna-plugin-dev-kit/template/tests/: test_my_plugin.py
marketplace-src/hello_world/: __init__.py  luna-plugin.toml
marketplace-src/hello_world_2/: __init__.py  luna-plugin.toml
marketplace-src/plugin_connectors/: __init__.py  luna-plugin.toml  protocol.py  routes.py  state.py  triggers.py
marketplace-src/plugin_goalseek/: __init__.py  effects.py  grants.py  knowledge.py  lifecycle.py  luna-plugin.toml  models.py  policy.py  prompt.py  routes.py  settings.py  tools.py  tuning.py  waits.py  wake.py
marketplace-src/plugin_interview/: luna-plugin.toml
plan/: ROADMAP.md  luna-sdk-proposal.md
service/: pyproject.toml  seed.py
service/app/: auth.py  database.py  main.py  packaging.py  seed_core.py  storage.py
service/app/models/: db.py  schemas.py
service/app/routers/: bundles.py  core.py  plugins.py  registry.py
service/templates/: app.html  catalog.html  plugin_detail.html
service/tests/: conftest.py  test_bundles.py  test_packaging.py  test_permanent_delete.py  test_registry_e2e.py  test_upload_flow.py
tools/luna-mp/: pyproject.toml
tools/luna-mp/luna_mp/: __init__.py  build.py  cli.py  schemas.py  signing.py  verify.py
tools/luna-mp/tests/: test_protocol.py
vision/: luna-change-requests.md  vision-draft.md
(+63 files in other folders)
