[project]
name = "luna-mp"
version = "0.1.0"
description = "Luna Marketplace reference tooling — build, verify, and serve static plugin marketplaces"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "huemorgan" }]
dependencies = [
    "pynacl>=1.5.0",
    "pydantic>=2.0",
    "click>=8.0",
    "canonicaljson>=2.0.0",
]

[project.scripts]
luna-mp = "luna_mp.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
